[package]

name = "lazy"
version = "0.5.3"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-lazy"
description = "Lazily evaluated types and macros."
readme = "README.md"
license = "MIT"

[dependencies]
debug_unreachable = "*"
oncemutex = { git = "https://github.com/aepsil0n/rust-once-mutex.git", branch = "update" }

[dev-dependencies]
stainless = "*"

